Mofify Header부분 디자인 적용

--- a/week3-homework/작업명세서.MD
+++ b/week3-homework/작업명세서.MD
@@ -3,9 +3,14 @@
   - 11st.co.kr
   - danawa.com
 2. 레이아웃 그리기  
-  - 필요한 HTML 태그정보 정리  
+  - 필요한 HTML 태그정보 정리(이미 Crong이 제공하였음) 
     -- 헤드 : 이미지 + div
     -- 네비 : ul+li(float)
+  - CSS만들기 
+    -- 문서 중앙 정렬
+    -- review, follow, folloing 숫자 색깔 넣기, float적용
+    -- 
+    -- li탭 만들기
   - 이벤트 항목 정리
     -- 헤드 : "load"
     -- 네비 : 포커스(색변화) + 클릭(메뉴불러오기)
