Modify header 부분 CSS수정 완

--- a/week3-homework/작업명세서.MD
+++ b/week3-homework/작업명세서.MD
@@ -9,7 +9,8 @@
   - CSS만들기 
     -- 문서 중앙 정렬
     -- review, follow, folloing 숫자 색깔 넣기, float적용
-    -- 
+    -- 엘리먼트 중앙 정렬1 : positon, left값 입력 / 단점 문서의 길이에 상관없이 절대 위치가 지정된다.
+    -- 엘리먼트 중앙 정렬2 : display:table, margin auto
     -- li탭 만들기
   - 이벤트 항목 정리
     -- 헤드 : "load"
