--- a/week3-homework/작업명세서.MD
+++ b/week3-homework/작업명세서.MD
@@ -2,19 +2,23 @@
 1. 사이트 참고사이트  
   - 11st.co.kr
   - danawa.com
-2. 레이아웃 그리기  
-  - 필요한 HTML 태그정보 정리(이미 Crong이 제공하였음) 
-    -- 헤드 : 이미지 + div
-    -- 네비 : ul+li(float)
+2. 레이아웃 그리기    
   - CSS만들기 
-    -- 문서 중앙 정렬
+    -- (완료)문서 중앙 정렬
     -- review, follow, folloing 숫자 색깔 넣기, float적용
-    -- 엘리먼트 중앙 정렬1 : positon, left값 입력 / 단점 문서의 길이에 상관없이 절대 위치가 지정된다.
-    -- 엘리먼트 중앙 정렬2 : display:table, margin auto
-    -- li탭 만들기
+    -- (완료)엘리먼트 중앙 정렬1 : positon, left값 입력 / 단점 문서의 길이에 상관없이 절대 위치가 지정된다.
+    -- (완료)엘리먼트 중앙 정렬2 : display:table, margin auto
+    -- (완료)li탭 만들기
   - 이벤트 항목 정리
     -- 헤드 : "load"
     -- 네비 : 포커스(색변화) + 클릭(메뉴불러오기)
+    -- 이벤트 4개로 만들
   - 
 3. HTML 작성  
-4. 이벤트 생성  
+  - (완료)필요한 HTML 태그정보 정리(이미 Crong이 제공하였음) 
+    -- (완료)헤드 : 이미지 + div
+    -- (완료)네비 : ul+li(float)
+4. 이벤트 생성 
+  - 예외처리  
+    -- 버튼을 누를시 1번만 메뉴화면 나오기
+  -  
