Modify 프로토타입 완성(HTML, CSS, JS)

--- a/week3-homework/작업명세서.MD
+++ b/week3-homework/작업명세서.MD
@@ -19,6 +19,8 @@
     -- (완료)헤드 : 이미지 + div
     -- (완료)네비 : ul+li(float)
 4. 이벤트 생성 
+  - 탭메뉴 색변환
+  - 탭메뉴 선택시 페이지 불러오
   - 예외처리  
     -- 버튼을 누를시 1번만 메뉴화면 나오기
   -  
