--- a/week3-homework/작업명세서.MD
+++ b/week3-homework/작업명세서.MD
@@ -19,8 +19,13 @@
     -- (완료)헤드 : 이미지 + div
     -- (완료)네비 : ul+li(float)
 4. 이벤트 생성 
+  - 탭메뉴 글자 중앙 정렬
   - 탭메뉴 색변환
   - 탭메뉴 선택시 페이지 불러오
   - 예외처리  
-    -- 버튼을 누를시 1번만 메뉴화면 나오기
+    -- (완료)버튼을 누를시 1번만 메뉴화면 나오기
+    -- 다른 탭을 누를시 기존 글자 삭제  
+       (매번 모든 탭메뉴를 다 지우는 것이 좋을까? 아니면 어느것이 작성되었는지 기억하는 것이 효율적일까?)
+    -- 
+
   -  
