Modify 필요없는 코드 줄이

--- a/week3-homework/작업명세서.MD
+++ b/week3-homework/작업명세서.MD
@@ -28,3 +28,8 @@
     -- (완료)다른 탭을 누를시 기존 글자 삭제  
        (매번 모든 탭메뉴를 다 지우는 것이 좋을까? 아니면 어느것이 작성되었는지 기억하는 것이 효율적일까?)
     
+5. 수정사항
+  - Ajax 안에서 이벤트 처리를 함수로 할 수있도록 수정  
+  - 불필요한 객체의 최소화(예.evt 객체)
+  - domcontentloaded 사용하여서 전역변수 정리  
+  - 캐시를 이용하여 ajax 2번 실행하지 않
