--- a/week3-homework/작업명세서.MD
+++ b/week3-homework/작업명세서.MD
@@ -32,4 +32,15 @@
   - Ajax 안에서 이벤트 처리를 함수로 할 수있도록 수정  
   - 불필요한 객체의 최소화(예.evt 객체)
   - domcontentloaded 사용하여서 전역변수 정리  
-  - 캐시를 이용하여 ajax 2번 실행하지 않
+  - 캐시를 이용하여 ajax 2번 실행하지 않기
+
+
+6.다른사람 코드 리뷰
+ - https://github.com/MulManDu/learning_codesquad/blob/master/Homework_3week/js/index.js
+   1. DOMContentLoaded로 초기화 선언
+   2. document.addEventListener로 전체 이벤트 확인
+   3. 색깔 초기화
+   4. 선택된 항목만 색깔 변화 
+   5. 이전에 작성된 기록 삭제
+   6. Ajax통신할 주소값을 가지고 ajax함수 실행
+
